Fix/Modal component height on mobile

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -610,6 +610,7 @@ ul ol {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
 	-ms-overflow-style: none;
 		scrollbar-width: none;
 }
